# ztsingou

./: readme.md  ztsingou.lua
ignore/ztsingou-engine/: CMakeLists.txt  main.cpp  run.sh  synth.hpp  test.scd  tsingou.cpp  tsingou.hpp  ztsingou-engine.lua
ignore/ztsingou-engine/bin-rpi/: ztsingou
lib/: run-macos.sh  run-norns.sh  ztsingou-engine.lua
